--- a/estilo/style.css
+++ b/estilo/style.css
@@ -23,7 +23,7 @@ body{
 
 
 header{
-    background-color: #03012c;
+    background-color: #050327;
 
     display: grid;
     grid-template-areas:
@@ -33,7 +33,7 @@ header{
 
 header > p{
     display: block;
-    background-color: #190E4F;
+    background-color: #190e4f28;
     color: white;
     padding: 10px;
     height: 25px;
@@ -97,8 +97,8 @@ nav > #icon-menu li:hover a{
     nav > #icon-menu{
         display: block;
     }
-    nav > #menu{
-        display:none;
+    nav > ul#menu{
+        display: none;
     }
 
     header{
@@ -136,6 +136,15 @@ nav > #menu li:hover > a{
     color: rgb(207, 221, 249);
 }
 
+
+main > .img-topo{
+    width: 100%;
+    height: 40%;
+}
+
+.img-topo > img{
+    width: 100%;
+}
 
 /*header{
     display: grid;
