salve texto e imagem no site

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,6 +8,7 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: green;
 }
 
 /*
@@ -23,7 +24,12 @@ body{
 
 
 header{
-    background-color: #050327;
+    background-color: #ffffff10;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.13);
+    backdrop-filter: blur(10px);
+
+    position: absolute;
+    width: 100%;
 
     display: grid;
     grid-template-areas:
@@ -52,8 +58,10 @@ nav a{
 }
 
 nav > div > i{
-    background-color: #040239;
-    color: white;
+    position: relative;
+    width: 100%;
+
+    color: #ffffffad;
     display: block;
     font-size: 2em;
     padding: 4px;
@@ -63,6 +71,11 @@ nav > div > i{
     margin-right: auto;
 }
 
+nav #icon-menu:hover i{
+    background-color: #ffffff0f;
+    color: #ffffff8d;
+}
+
 nav > #icon-menu{
     grid-area: "menu";
     display: none;
@@ -70,7 +83,7 @@ nav > #icon-menu{
 
 nav > #icon-menu > ul{
     display: none;
-    background-color: #040239;
+
     width: 130%;
     text-align: center;
 }
@@ -84,7 +97,9 @@ nav > #icon-menu li{
 }
 
 nav > #icon-menu li:hover{
-    background-color: #190E4F;
+    background-color: #ffffff1a;
+    backdrop-filter: blur(10px);
+
     transition-duration: 0.3s;
 }
 
@@ -102,7 +117,13 @@ nav > #icon-menu li:hover a{
     }
 
     header{
-        background-color: #03012C;
+        background-color: #ffffff10;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.13);
+        backdrop-filter: blur(10px);
+
+        position: absolute;
+        width: 100%;
+
         display: grid;
         grid-template-columns: 80% 20%;
         grid-template-areas:
@@ -144,6 +165,31 @@ main > .img-topo{
 
 .img-topo > img{
     width: 100%;
+}
+
+main > #text1{
+    color: rgb(201, 201, 201);
+    width: 35%;
+
+    position: absolute;
+    top: 13%;
+    left: 1.5%;
+}
+
+main > #text1 > h1{
+    padding-bottom: 30px;
+    font-size: clamp(0.8em, 1em + 2.5vw, 2em);
+}
+
+@media(max-width: 610px){
+    main > #text1{
+       top: 7%;
+    }
+
+    main > #text1 > h1{
+        padding-bottom: 20px;
+    }
+
 }
 
 /*header{
