--- a/estilo/style.css
+++ b/estilo/style.css
@@ -161,7 +161,7 @@ main > .img-topo{
     height: 40%;
 }
 
-.img-topo > img{
+.img-topo img{
     width: 100%;
 }
 
@@ -171,7 +171,7 @@ main > .img-topo{
         width: 100%;
     }
 
-    .img-topo > img{
+    .img-topo img{
         display: block;
         width: 85%;
         margin-left: auto;
